add fix for broken testFixtures in eclipse, grrr